--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "license": "MIT",
   "description": "Gardr plugin that automatically removes iframes based on certain conditions",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Schibsted-Tech-Polska/gardr-plugin-host-remove"
+  },
   "scripts": {
     "test": "./node_modules/.bin/mocha"
   },
